syntax = "proto3";
package keyvalueservice;

import "google/protobuf/struct.proto";

service KeyValueService {
  rpc Get (KeyRequest) returns (GetResponse);
  rpc Set (KeyValueRequest) returns (SetResponse);
  rpc Delete (KeyRequest) returns (DeleteResponse);
}

message KeyRequest {
  string key = 1;
}

message KeyValueRequest {
  string key = 1;
  google.protobuf.Value value = 2;
}

message GetResponse {
  optional google.protobuf.Value value = 1;
}

message SetResponse {
  bool updated = 1;
}

message DeleteResponse {
  bool deleted = 1;
}
